--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Welcome</h1>
+    <h1>Welcome to Vintage American Football!!!!</h1>
     <script src="app/main.js" type="text/javascript"></script>
   </body>
 </html>
